// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Store plays a track 1`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "currentTrack": Object {
        "__typename": "MediaPlayerTrack",
        "artist": "artist",
        "mediaSourceUri": "mediaSourceUri",
        "posterSourceUri": "posterSourceUri",
        "title": "title",
      },
      "isFullscreen": false,
      "isPlaying": true,
      "isVisible": true,
    },
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store updates player state 1`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "currentTrack": Object {
        "__typename": "MediaPlayerTrack",
        "artist": "artist",
        "mediaSourceUri": "mediaSourceUri",
        "posterSourceUri": "posterSourceUri",
        "title": "title",
      },
      "isFullscreen": false,
      "isPlaying": true,
      "isVisible": true,
    },
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`MediaPlayer Store updates player state 2`] = `
Object {
  "data": Object {
    "mediaPlayer": Object {
      "__typename": "MediaPlayerState",
      "currentTrack": Object {
        "__typename": "MediaPlayerTrack",
        "artist": "artist",
        "mediaSourceUri": "mediaSourceUri",
        "posterSourceUri": "posterSourceUri",
        "title": "title",
      },
      "isFullscreen": false,
      "isPlaying": false,
      "isVisible": true,
    },
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;
